--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,7 +127,8 @@ dependencies {
     compile("com.squareup.retrofit2:adapter-rxjava:${RETROFIT2_VERSION}")
     compile("com.squareup.okhttp3:logging-interceptor:${OKHTTP_VERSION}")
 
-    compile("com.github.bumptech.glide:glide:3.7.0", "com.github.bumptech.glide:okhttp3-integration:1.4.0@aar")
+    compile("com.github.bumptech.glide:glide:3.7.0")
+    // , "com.github.bumptech.glide:okhttp3-integration:1.4.0@aar"
     compile("com.theartofdev.edmodo:android-image-cropper:2.4.0")
 
     compile('com.android.support.constraint:constraint-layout:1.0.2')
